[gd_scene load_steps=38 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://player/Spaceship.png" type="Texture" id=2]
[ext_resource path="res://player/spaceship-fire.png" type="Texture" id=3]
[ext_resource path="res://player/shipreactor.wav" type="AudioStream" id=4]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/spaceship-fire.png-1da2164d042289a219e025eb5c5529c6.stex"

[sub_resource type="Animation" id=2]
resource_name = "FireBoth"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FireLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireRight:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FireRight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FireLeft:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "FireLeft"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FireLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireLeft:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FireRight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "FireRight"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FireRight:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireRight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FireLeft:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FireLeft:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireRight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ReactorSoundPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=20]
resource_name = "StartFireBoth"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("FireLeft:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireRight:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FireLeft:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FireRight:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ReactorSoundPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
resource_name = "StartFireLeft"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("FireLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireLeft:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FireRight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ReactorSoundPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=19]
resource_name = "StartFireRight"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("FireRight:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireLeft:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FireRight:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ReactorSoundPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "FireBoth"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "FireLeft"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "FireRight"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "StartFireBoth"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "StartFireLeft"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "StartFireRight"

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachine" id=16]
states/FireBoth/node = SubResource( 6 )
states/FireBoth/position = Vector2( 777, 321 )
states/FireLeft/node = SubResource( 7 )
states/FireLeft/position = Vector2( 538, 71 )
states/FireRight/node = SubResource( 8 )
states/FireRight/position = Vector2( 492, 537 )
states/Idle/node = SubResource( 9 )
states/Idle/position = Vector2( 144, 309 )
states/StartFireBoth/node = SubResource( 21 )
states/StartFireBoth/position = Vector2( 430, 267 )
states/StartFireLeft/node = SubResource( 22 )
states/StartFireLeft/position = Vector2( 251, 71 )
states/StartFireRight/node = SubResource( 23 )
states/StartFireRight/position = Vector2( 214, 490 )
transitions = [ "FireLeft", "Idle", SubResource( 26 ), "Idle", "StartFireBoth", SubResource( 27 ), "StartFireBoth", "FireBoth", SubResource( 28 ), "FireBoth", "Idle", SubResource( 29 ), "FireRight", "Idle", SubResource( 32 ), "StartFireBoth", "Idle", SubResource( 35 ), "StartFireRight", "FireRight", SubResource( 31 ), "StartFireRight", "Idle", SubResource( 33 ), "Idle", "StartFireRight", SubResource( 30 ), "StartFireLeft", "FireLeft", SubResource( 25 ), "StartFireLeft", "Idle", SubResource( 34 ), "Idle", "StartFireLeft", SubResource( 24 ), "FireBoth", "FireLeft", SubResource( 36 ), "FireBoth", "FireRight", SubResource( 37 ), "FireLeft", "FireBoth", SubResource( 38 ), "FireRight", "FireBoth", SubResource( 39 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5, 0 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -24.6814, 23.723, 11.0474, 16.1564, 40.2314, 0.722515, 10.5563, -13.7292, -24.5634, -21.347 )

[node name="FireLeft" type="Sprite" parent="."]
visible = false
position = Vector2( 5, 0 )
rotation = 1.5708
texture = ExtResource( 3 )
hframes = 11

[node name="FireRight" type="Sprite" parent="."]
visible = false
position = Vector2( 5, 68 )
rotation = 1.5708
texture = SubResource( 1 )
hframes = 11

[node name="FireAnimationPlayer" type="AnimationPlayer" parent="."]
anims/FireBoth = SubResource( 2 )
anims/FireLeft = SubResource( 3 )
anims/FireRight = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/StartFireBoth = SubResource( 20 )
anims/StartFireLeft = SubResource( 18 )
anims/StartFireRight = SubResource( 19 )

[node name="FireAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../FireAnimationPlayer")
parameters/playback = SubResource( 17 )

[node name="ReactorSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
